force-app/main/default/objects/Account/fields/New_Field_Used_in_Automation__c.field-meta.xml
<CustomField>
    <fullName>New_Field_Used_in_Automation__c</fullName>
    <externalId>true</externalId>
    <label>New Field Used in Automation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>