force-app/main/default/objects/Account/fields/TestField1__c.field-meta.xml
<CustomField>
    <fullName>TestField1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TestField1</label>
    <type>Checkbox</type>
</CustomField>