force-app/main/default/objects/Account/fields/testfield__c.field-meta.xml
<CustomField>
    <fullName>testfield__c</fullName>
    <defaultValue>false</defaultValue>
    <label>testfield</label>
    <type>Checkbox</type>
</CustomField>